--- a/cosmicdepth/templates/about.html
+++ b/cosmicdepth/templates/about.html
@@ -1,4 +1,20 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <div class="container">
+				<!--Row-->
+				<div class="row">
+						<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="5.1983" y1="28.1187" x2="43.4067" y2="11.702">
+							<stop offset="0" style="stop-color:#399BFF" />
+							<stop offset="1" style="stop-color:#EE71F9" />
+							<h1 class="title">About CosmicDepth / Cosmic Hacks V1</h1>
+						</linearGradient>
+						<p class="title-lead mt-20">CosmicDepth / Cosmic Hacks V1 is a 24 Hour All MSc and Data Science Hackathon hosted by the University of Exeter, UK. It is a sincere effort to provide a fruitful
+							experience to all those who wish to explore their areas of interest.The event is an opportunity for hackers to exchange their ideas, gain extra knowledge and to make good relations for future collaborations. We
+							wholeheartedly invite all the technophiles to this exciting Hackathon…</p>
+						<p class="title-lead mt-20">All activities are enforced with our: <br>
+							<h5 class="gradient-text"><a class="title-lead mt-20" href="https://github.com/meenhacks/Code-of-Conduct/blob/master/code-of-conduct.md">Code of Conduct</a></h5>
+						</p>
+					</div>
+				</div>
+
 {% endblock content %}
