--- a/cosmicdepth/templates/about.html
+++ b/cosmicdepth/templates/about.html
@@ -12,7 +12,7 @@
 							experience to all those who wish to explore their areas of interest.The event is an opportunity for hackers to exchange their ideas, gain extra knowledge and to make good relations for future collaborations. We
 							wholeheartedly invite all the technophiles to this exciting Hackathon…</p>
 						<p class="title-lead mt-20">All activities are enforced with our: <br>
-							<h5 class="gradient-text"><a class="title-lead mt-20" href="https://github.com/meenhacks/Code-of-Conduct/blob/master/code-of-conduct.md">Code of Conduct</a></h5>
+							<h5 class="gradient-text"><a class="title-lead mt-20" href="https://github.com/Aarif1430">Code of Conduct</a></h5>
 						</p>
 					</div>
 				</div>
